# shift-scheduler

./: .dockerignore  .gitignore  Dockerfile  MANUAL_TEST_PLAN.md  PROGRESS.md  aws_project_plan.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
api/: config.py  database.py  deps.py  main.py
api/models/: __init__.py  audit_log.py  base.py  constraint.py  demand.py  group.py  member.py  pattern.py  rest_request.py  schedule.py  tenant.py  user.py
api/routers/: audit_logs.py  auth.py  constraints.py  demands.py  fixed_assignments.py  groups.py  imports.py  members.py  pattern_rules.py  patterns.py  personal.py  rest_requests.py  schedules.py
api/schemas/: auth.py  common.py
api/services/: audit.py  auth.py  export_excel.py  export_pdf.py  import_excel.py  s3.py  scheduler.py  tasks.py
solver_core/: README.md  analyzer.py  compiler.py  context.py  engine.py  explain.py  feasibility.py  manager.py  models.py  scenario.py  schema_input.json  schema_output.json  scoring.py  solver.py
solver_core/constraints/: __init__.py  base.py  p0_fixed.py  p10_pattern_balance.py  p1a_forbidden.py  p1b_chain.py  p2_weekly_days.py  p3_period_days.py  p4_weekly_hours.py  p5_period_hours.py  p6_consecutive_work.py  p7_consecutive_rest.py  p8_group_demand.py  p9_daily_demand.py
tests/: conftest.py  test_api.py  test_api_integration.py  test_audit.py  test_edge_cases.py  test_explain_scenario.py  test_performance.py  test_phase11.py  test_solver_basic.py
tests/data/: basic_10.json
web/: package-lock.json  package.json
web/src/: App.tsx
web/src/api/: audit-logs.ts  auth.ts  client.ts  constraints.ts  demands.ts  fixed-assignments.ts  groups.ts  imports.ts  members.ts  (+5 more)
(+13 files in other folders)
